# chat_rooms_rs

./: Cargo.toml  README.md  client  gui  server  tests  tui  vec_log
notes/: index.org
src/: cli.rs  lib.rs  server.rs
src/gui/: app.rs
src/tui/: chat_box.rs  main.rs  screen.rs  tui.rs  utils.rs
