[package]
name = "room_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cli"
path = "./src/cli.rs"

[[bin]]
name = "tui"
path = "./src/tui/main.rs"

[[bin]]
name = "gui"
path = "./src/gui/main.rs"

[[bin]]
name = "server"
path = "./src/server.rs"

[dependencies]
egui = "0.26.2"
eframe = { version = "0.26.0", default-features = false, features = [
	"glow",        # Use the glow rendering backend. Alternative: "wgpu".
	"persistence", # Enable restoring app state when restarting the app.
] }
serde = "1.0.197"

[dependencies.crossterm]
version = "0.27.0"
features = ["event-stream"]
